src/components/heroCard/index.scss
.hero-card {
    position: absolute;
    top: 10em;
    right: 6em;
    max-width: 425px;
    height: fit-content;
    padding: 1em 2em;
    background: #fff;
    box-shadow: var(--global);

    .title-container {
        display: flex;
        align-items: center;
        gap: 2rem;
    }
    
    .div-line {
        border: 1px solid var(--secondary);
        margin-bottom: 1em;
    }

    .contact {
        display: flex;
        align-items: center;
        gap: 1rem;
    }
}
@media screen and (max-width: 768px) {
    .hero-card {
        position: relative;
        top: 3em;
        right: initial;
        max-width: 100%;
        max-height: 470px;

        .title-container {
            gap: 1rem;
        }

        .contact {
            gap: 0.75rem;
        }
    }
}

